feat: implement listed requests logic